--- a/rsyncd.conf
+++ b/rsyncd.conf
@@ -1,11 +1,11 @@
-pid file = /var/run/rsyncd.pid
-lock file = /var/run/rsync.lock
-log file = /var/log/rsync.log
+pid file = /tmp/rsyncd.pid
+lock file = /tmp/rsync.lock
+log file = /dev/stdout
+port = 8730
 
 [files]
 path = /mnt/files
 timeout = 300
 use chroot = false
-log file = /dev/stdout
 read only = false
 max verbosity = 3
